--- a/package.json
+++ b/package.json
@@ -1,71 +1,21 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "farzadyz.com",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
-  "version": "1.0.0",
-  "author": "Farzad YZ <farskid@gmail.com>",
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "css-element-queries": "^1.2.3",
-    "gatsby": "^2.18.17",
-    "gatsby-image": "^2.0.22",
-    "gatsby-plugin-feed": "^2.0.8",
-    "gatsby-plugin-feed-generator": "^1.0.6",
-    "gatsby-plugin-google-analytics": "^2.0.5",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.3.10",
-    "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^2.0.4",
-    "gatsby-remark-prismjs": "^3.0.0",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-transformer-remark": "^2.1.6",
-    "gatsby-transformer-sharp": "^2.1.3",
-    "prismjs": "^1.15.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
-    "serialize-javascript": "^2.1.2",
-    "set-value": "^3.0.1",
-    "twit": "^2.2.11",
-    "typeface-ibm-plex-mono": "^0.0.61",
-    "typeface-ibm-plex-sans": "^0.0.61",
-    "typeface-ibm-plex-serif": "^0.0.61",
-    "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10"
-  },
+  "description": "Personal website owned by Farzad Yousefzadeh",
+  "version": "2.0.0",
+  "author": "Farzad YousefZadeh <farskid@gmail.com>",
+  "dependencies": {},
   "devDependencies": {
-    "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.27",
-    "chalk": "^2.4.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.11.1",
-    "identity-obj-proxy": "^3.0.0",
-    "inquirer": "^6.2.1",
-    "jest": "^24.9.0",
-    "prettier": "^1.14.2",
-    "uuid": "^3.3.2"
+    "handlebars": "^4.7.6"
   },
-  "license": "MIT",
-  "main": "n/a",
+  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git@github.com:farskid/farzadyz.com.git"
   },
   "scripts": {
-    "dev": "export SITE_URL=http://localhost:8000 && export ANALYTICS_TRACK_ID= && gatsby develop",
-    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
-    "test": "jest",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
-    "develop": "export SITE_URL=http://localhost:8000 && ANALYTICS_TRACK_ID= && gatsby develop",
-    "start": "npm run develop",
-    "build": "export SITE_URL=https://farzadyz.com && export ANALYTICS_TRACK_ID=\"UA-131280656-1\" && rm -rf .cache && gatsby build",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
-    "create-post": "node scripts/create-post.js"
+    "compile": "node scripts/registerPartials.js && node scripts/compile-templates.js",
+    "dev": "export ANALYTICS_TRACK_ID=",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'"
   }
 }
