--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "author": "Farzad YousefZadeh <farskid@gmail.com>",
   "dependencies": {},
   "devDependencies": {
-    "handlebars": "^4.7.6"
+    "@github-docs/frontmatter": "^1.3.1",
+    "fs-extra": "^9.1.0",
+    "handlebars": "^4.7.6",
+    "highlight.js": "^10.5.0",
+    "highlightjs": "^9.16.2",
+    "remarkable": "^2.0.1",
+    "remarkable-front-matter": "^1.0.1-beta.1",
+    "serve": "^11.3.2",
+    "slugify": "^1.4.6"
   },
   "license": "ISC",
   "repository": {
@@ -14,8 +22,8 @@
     "url": "git@github.com:farskid/farzadyz.com.git"
   },
   "scripts": {
-    "compile": "node scripts/registerPartials.js && node scripts/compile-templates.js",
-    "dev": "export ANALYTICS_TRACK_ID=",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'"
+    "dev": "export ANALYTICS_TRACK_ID= && serve export",
+    "build": "yarn clean && node scripts/build.js",
+    "clean": "rm -rf export"
   }
 }
