--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "dependencies": {},
   "devDependencies": {
     "@github-docs/frontmatter": "^1.3.1",
+    "concurrently": "^5.3.0",
+    "esm": "^3.2.25",
     "fs-extra": "^9.1.0",
     "handlebars": "^4.7.6",
     "highlight.js": "^10.5.0",
-    "highlightjs": "^9.16.2",
+    "nodemon": "^2.0.7",
     "remarkable": "^2.0.1",
     "remarkable-front-matter": "^1.0.1-beta.1",
     "serve": "^11.3.2",
@@ -22,7 +24,7 @@
     "url": "git@github.com:farskid/farzadyz.com.git"
   },
   "scripts": {
-    "dev": "export ANALYTICS_TRACK_ID= && serve export",
+    "dev": "export ANALYTICS_TRACK_ID= && concurrently \"serve export\" && \"nodemon scripts/build.js\"",
     "build": "yarn clean && node scripts/build.js",
     "clean": "rm -rf export"
   }
